--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,11 @@
   </head>
   <body class="baseclass">
     <h1>{{context}}</h1>
-    <img src="media/a(3).png" alt="Hi!">
+
+
+    {%block content%}
+    {%endblock%}
+    <!-- <img src="media/a(3).png" alt="Hi!"> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
